--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "import": "./index.js"
   },
   "description": "CLI to build jamp stack websites with various stacks and services",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "npm run test"
+    "@todo": "@todo"
   },
   "repository": {
     "type": "git",
@@ -65,6 +65,7 @@
     "postcss-url": "^10.1.3",
     "pretty": "^2.0.0",
     "pretty-tree": "^1.0.0",
+    "typescript": "^4.5.5",
     "uhtml-isomorphic": "^1.0.1",
     "webassert": "^3.0.2"
   },
@@ -86,9 +87,9 @@
     "url": "https://github.com/sponsors/naeluh"
   },
   "files": [
-    "bin.js",
+    "bin.ts",
     "lib/**",
-    "index.js"
+    "index.ts"
   ],
   "c8": {
     "reporter": [
